modules/grammars/tool/src/test/resources/cocos/valid/ResourceName.td
package valid;

tool ResourceName {
    attribute path = "some/awesome/path";

    resource SOME_RESOURCE {
        attribute path = "some/other/awesome/path";
    }
}
